# deadbeef-plugin-discord-rpc

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  discordrpc.c  discordrpc.h
scripts/: install.bat  install.sh  uninstall.bat  uninstall.sh
src/: config.rs  deadbeef.rs  discordrpc.rs  error.rs  lib.rs  musicbrainz.rs  util.rs
src/deadbeef/: http.rs  mod.rs  safe_wrapper.rs
