[package]
name = "deadbeef-plugin-discord-rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
discord-rich-presence = "1.0.0"
lazy_static = "1.5.0"
once_cell = "1.21.3"

json = "0.12.4"
urlencoding = "2.1.3"

[build-dependencies]
bindgen = "0.72.1"

[lib]
name = "discordrpc"
crate-type = ["cdylib"]

[profile.release]
debug = false
lto = true
opt-level = "z"
codegen-units = 1
strip = true
